--- a/lzt/manifest.json
+++ b/lzt/manifest.json
@@ -1,19 +1,22 @@
 {
   "icons": [
     {
-      "src": "/public/brand/favicon-16x16.png",
-      "sizes": "16x16",
-      "type": "image/png"
-    },
-    {
-      "src": "/public/brand/favicon-32x32.png",
-      "sizes": "32x32",
-      "type": "image/png"
-    },
-    {
       "src": "/public/brand/apple-touch-icon-180x180.png",
       "sizes": "180x180",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/public/brand/apple-touch-icon-167x167.png",
+      "sizes": "167x167",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/public/brand/apple-touch-icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
