--- a/lzt/manifest-market.json
+++ b/lzt/manifest-market.json
@@ -1,19 +1,19 @@
 {
   "icons": [
     {
-      "src": "/public/brand/market-apple-touch-icon-180x180.png",
+      "src": "https://lolz.live/public/brand/market-apple-touch-icon-180x180.png",
       "sizes": "180x180",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/public/brand/market-apple-touch-icon-167x167.png",
+      "src": "https://lolz.live/public/brand/market-apple-touch-icon-167x167.png",
       "sizes": "167x167",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/public/brand/market-apple-touch-icon-152x152.png",
+      "src": "https://lolz.live/public/brand/market-apple-touch-icon-152x152.png",
       "sizes": "152x152",
       "type": "image/png",
       "purpose": "any maskable"
